# RustScripttoInspectData

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: .keep
src/: app.rs  dep_check.rs  main.rs
