[package]
name = "csv_encoding_orchestrator_egui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A GUI tool to orchestrate CSV dimension checks across R and Python with various encodings using egui."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] } 
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
csv = "1.3.0"
duct = "0.13.6"
tempfile = "3.8.1"
walkdir = "2.4.0"

eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use glow (OpenGL) backend, preferred for desktop
    # "persistence", # Uncomment to enable window state persistence
] }
rfd = "0.12.0" # Rustic File Dialogs, for native file dialogs

# For checking dependencies
which = "4.4.0" # To find executables in PATH
once_cell = "1.18.0" # For lazy static initialization of check results

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

# Keep build output quiet.
[workspace]
resolver = "2"